# ontos

./: .coverage  .cursorrules  .env.example  .gitignore  CLAUDE.md  NOTICE  README.md  TESTING_PLAN.md  app.yaml  package.json  pyproject.toml  requirements.txt  vite.config.ts
.cursor/rules/: 01-expertise-and-principles.mdc  02-project-overview.mdc  03-system-components-and-requirements.mdc  04-project-structure.mdc  05-code-style-and-structure.mdc  08-testing-and-deployment.mdc
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  cuj.yml  feature.yml  feature_request.md
.github/workflows/: test-coverage.yml
alembic/: env.py
alembic/versions/: 4f2b1a9a8c3a_add_data_contracts_tables.py
api/: app.py
api/common/: audit_logging.py  authorization.py  config.py  database.py  dependencies.py  features.py  manager_dependencies.py  middleware.py  search_registry.py  workspace_client.py
api/controller/: audit_manager.py  authorization_manager.py  business_glossaries_manager.py  data_asset_reviews_manager.py  data_contracts_manager.py  data_domains_manager.py  data_products_manager.py  entitlements_manager.py  estate_manager.py  metadata_manager.py  notifications_manager.py  search_manager.py  security_features_manager.py  semantic_links_manager.py  semantic_models_manager.py  settings_manager.py  tags_manager.py  users_manager.py
api/data/: data_asset_reviews.yaml  data_domains.yaml  data_products.yaml  notifications.yaml  sample_notebook_definition.py
api/db_models/: __init__.py  audit_log.py  change_log.py  (+9 more)
docs/: COMMENTS_USAGE.md  DQX_OAUTH_MIGRATION_SUMMARY.md  DQX_PROFILING_IMPLEMENTATION_SUMMARY.md  SCHEMA_INFERENCE_SUMMARY.md  compliance-dsl-guide.md  semantic-linking-system.md  semantic-versioning-implementation.md
src/: .coverage  app.tsx  app.yaml  coverage.xml  databricks.yaml  package.json  pyproject.toml  requirements.txt
static/: index-B9cjRLRE.js  index-Ba7qnYQY.js  index-CLDaGcEl.css  index-CgVa48SY.js  index-CiQdoEGJ.js  index-D8TOcQlk.js  index-D8x_fLjf.css  index-DFQbZXkm.css  index-DJKCLOdP.css  index-DN93H6TW.js  index-D_rX9hFP.js  index-DeniP_kQ.js  index-Dl8IFGIT.js  index-DmdqGZcZ.js  index-DwPpn4H3.css  index-DyjAI70x.css  index.html  vendor-lxsVW7Py.js  vendor-lxsVW7Py.js.map
(+527 files in other folders)
